* 2017.05.15 - improving detection of different versions of python and pip (useful for TensorFlow)

* 2017.05.10 - added protobuf 3.2 & 3.3 for Linux, Windows and Android (needed for Caffe2)

* 2017.05.08 - added ARM compute lib description
             - passing updated env to all package/soft customization scripts

* 2017.04.28 - added 'ck distribution package' to create binary distributions 
               (useful for Caffe crowd-benchmarking and crowd-tuning)

* 2017.04.26 - added support for LMDB lib for Windows

* 2017.04.25 - added experimental mode to rebuild package without download (ck install package:{name} --rebuild)
             - added ck xset env with default flags to quickly set env from command line (useful for caffe python)

* 2017.04.23 - added possibility to customize path during package installation (--path=)

* 2017.04.22 - fixed bug when detecting already installed via CK software (restoring tags!)

* 2017.04.21 - fixed recording of package UOA when automatically detecting allready installed soft (restoring env - needed for Caffe crowd-benchmarking)

* 2017.04.20 - added LMDB universal package (not completely working on Windows) ...

* 2017.04.19 - added adb.exe for Windows to os:windows-32

* 2017.04.18 - added package to automatically download and install GCC 6.3.0 for Windows
               (needed for OpenBLAS + Caffe)
             - added perl-strawberry-5.24.1.1-win (also for OpenBLAS on Windows)
             - added use_locale_for_version to detect Microsoft compiler version on non-English Windows
               (tested on French one)

* 2017.04.17 - added support for AMD OpenCL lib

* 2017.04.15 - moved many generic packages from ck-autotuning here
             - added LLVM 4.0.0 universal package (still need to fix for Linux)
             - fixed env refresh when extra package name is available (useful for caffe/tensorflow models)

* 2017.04.14 - fixed mingw gfortran detection on Windows (for Caffe)
